--- a/RiftEffects/Main.storyboard
+++ b/RiftEffects/Main.storyboard
@@ -1108,11 +1108,11 @@
                         <viewControllerLayoutGuide type="bottom" id="j3d-oc-3aS"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="vua-Lu-kpo">
-                        <rect key="frame" x="0.0" y="0.0" width="844" height="390"/>
+                        <rect key="frame" x="0.0" y="0.0" width="844" height="358"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rqn-1e-2vU">
-                                <rect key="frame" x="375" y="0.0" width="409" height="369"/>
+                                <rect key="frame" x="347.66666666666674" y="0.0" width="436.33333333333326" height="337"/>
                                 <connections>
                                     <segue destination="Cot-0o-SSg" kind="embed" identifier="embedImageController" id="6v8-JT-r5t"/>
                                 </connections>
@@ -1347,7 +1347,7 @@
                         <viewControllerLayoutGuide type="bottom" id="saJ-3B-Hdt"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kkb-fQ-6H9">
-                        <rect key="frame" x="0.0" y="0.0" width="844" height="390"/>
+                        <rect key="frame" x="0.0" y="0.0" width="844" height="358"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0zT-sz-lF2">
@@ -1424,7 +1424,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Q8R-MU-xpB"/>
+        <segue reference="PxL-X2-Jgh"/>
         <segue reference="qOY-ip-WfD"/>
         <segue reference="4FJ-we-3bf"/>
         <segue reference="7je-js-ORP"/>
